--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   <title>Elden Ring Achievements Checklist</title>
 </head>
 
-<body>
+<body data-theme="dark">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
